--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,24 +3,33 @@ body {
 	letter-spacing:3px;
 	padding-top:1em;
 	background:white;
-	font-size:20px;
+	font-size:22px;
 }
 /*Header styles*/
 h1 {
 	text-indent:-9999px;
 }
-.logo img {
-	width:140px;
-}
 header {
-	display:flex;
+	display: -webkit-box;
+  	display: -moz-box;
+  	display: -ms-flexbox;
+  	display: -webkit-flex;
+  	display: flex;
+  	-webkit-align-items:center;
 	align-items:center;
+	-webkit-flex-direction:column;
 	flex-direction:column;
 }
 nav ul {
-	display:flex;
+	display: -webkit-box;
+  	display: -moz-box;
+  	display: -ms-flexbox;
+  	display: -webkit-flex;
+  	display: flex;
+  	-webkit-justify-content:center;
 	justify-content:center;
 	list-style:none;
+	-webkit-flex-direction:column;
 	flex-direction:column;
 	margin-top:-4em;
 	margin-bottom:2em;
@@ -28,7 +37,7 @@ nav ul {
 }
 nav ul li {
 	text-align:center;
-	padding:3px 0;
+	padding:5px 0;
 }
 nav ul li a {
 	text-decoration:none;
@@ -38,11 +47,19 @@ nav ul li a:hover {
 	color:#5b5a5b;
 }
 .active {
-	color:#eb75ad;
+	color:#ce4f8b;
+}
+.contact:hover {
+	color:#411eda;
 }
 /*Button*/
 .buttonbox {
-	display:flex;
+	display: -webkit-box;
+  	display: -moz-box;
+  	display: -ms-flexbox;
+  	display: -webkit-flex;
+  	display: flex;
+  	-webkit-justify-content:center;
 	justify-content:center;
 }
 .button {
@@ -61,6 +78,7 @@ nav ul li a:hover {
 /*Media Queries*/
 @media screen and (min-width:800px) {
 	nav ul {
+		-webkit-flex-direction:row;
 		flex-direction:row;
 	}
 	nav ul li {
